--- a/Desafio/desafio.html
+++ b/Desafio/desafio.html
@@ -11,7 +11,7 @@
         <hr />
             <h3>Índice</h3>
 
-                <ul><li>Entendendo Comunicação Client x Server</li>
+                <ul><li><strong>Entendendo Comunicação Client x Server</strong></li>
 
                     <ol><li>Historia da Web</li>
                         <ul><small>
@@ -20,12 +20,26 @@
                             <li>Como Surgiu</li>
                             <li>Grandes Nomes</li>
                         </small></ul>
-                        <li>O que são Clients</li>
+                        <li>O que são <i>Clients</i></li>
                         <ul><small>
                             <li>Cliente no Linguajar Web</li>
                             <li>Navegadores</li>
                             <li>Aplicações Web</li>
                             <li>Dispositivos Móveis</li>
+                        </small></ul>
+                        <li>O que são <i>Servers</i></li>
+                        <ul><small>
+                            <li>Sobre Servidores</li>
+                            <li>Hardwares e Softwares em Servidores</li>
+                            <li>Tipos de Servidores</li>
+                            <li>Hospedagem de Sites</li>
+                        </small></ul>
+                        <li>Linguagens de Programação</li>
+                        <ul><small>
+                            <li>O que é</li>
+                            <li><i>Server-Side</i></li>
+                            <li><i>Client-Side</i></li>
+                            <li>HTML não é Linguagem de Programação</li>
                         </small></ul>
                     </ol>
         
