Pag 1 Atualizada, Começo da pag 2

--- a/Desafio/pagina1.html
+++ b/Desafio/pagina1.html
@@ -9,7 +9,7 @@
     <body>
         <h2>A aventura até o desafio: "Criar Uma Página Web Utilizando as Tags Aprendidas"</h2>
         <hr />
-            <h3>Índice</h3>
+            <h2>Conteúdos:</h2>
 
                 <ul><li><strong>Entendendo Comunicação Client x Server</strong></li>
 
