--- a/Desafio/pagina2.html
+++ b/Desafio/pagina2.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entendendo Comunicação Client x Server</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Entendendo Comunicação Client x Server</title>
+    </head>
     
-</body>
+    <body>
+        <h2>Entendendo Comunicação Client x Server</h2>
+        <hr />
+            <h2>Índice:</h2>
+
+
+    
+    </body>
 </html>
