Pagina 2 quase pronta

--- a/Desafio/pagina1.html
+++ b/Desafio/pagina1.html
@@ -15,7 +15,7 @@
 
                     <ol><li>Historia da Web</li>
                         <ul><small>
-                            <li>Apresentação do Curso e Profeesor</li>
+                            <li>Apresentação do Curso e Professor</li>
                             <li>Primeiros Computadores</li>
                             <li>Como Surgiu</li>
                             <li>Grandes Nomes</li>
