--- a/Desafio/pagina1.html
+++ b/Desafio/pagina1.html
@@ -75,7 +75,9 @@
                         <li>Criar Uma Página Web Utilizando as Tags Aprendidas</li>
                         <li>Entendendo o Desafio</li>
                     </small></ul>
-                    </ol>        
+                    </ol>
+                <li><strong>Referências</strong></li>
+                        
                 <ul>
     </body>
 </html>
