--- a/Desafio/pagina2.html
+++ b/Desafio/pagina2.html
@@ -44,6 +44,7 @@
             </ul>
 
             <h1><strong>Entendendo Comunicação Client x Server</strong></h1>
+
                 <h2>Historia da Web</h2>
                     <p><strong>Apresentação do Curso e Professor:</strong> Basicamente nesse primeiro momento o professor "Diego Medeiros Mainardes", o qual é Desenvolverdor Sênior
                     e trabalha com Desenvolvimento Web a muito tempo apresenta o curso da "Formação HTML Web Developer" e fala sobre os "Primeiros Passos com HTML".
@@ -100,17 +101,60 @@
                     </p>
                 
                 <h2>O que são <i>Servers</i></h2>
-                    <p><strong>: </strong></p>
+                    <p><strong>Sobre Servidores: </strong>Servidores no contexto da linguagem web são computadores ou softwares especializados que armazenam e disponibilizam 
+                    informações, páginas da web e outros recursos para os clientes, como navegadores, que os solicitam. Eles são fundamentais para hospedar sites, aplicativos web e 
+                    serviços online, garantindo que os usuários possam acessar esses recursos a qualquer momento, geralmente através da internet. Os servidores web executam funções
+                    como processamento de transporte, armazenamento de dados e entrega de conteúdo aos clientes de forma eficiente e segura.
+                    </p>
 
-                    <p><strong>: </strong></p>
+                    <p><strong>Hardwares e Softwares em Servidores: </strong>Servidores são compostos por hardware e software essenciais para sua operação. Os componentes de 
+                    hardware incluem exercícios como memória RAM, armazenamento e placas de rede. O software engloba o sistema operacional do servidor, aplicativos e serviços 
+                    necessários para fornecer funcionalidades específicas, como servidores web, bancos de dados e softwares de segurança. Juntos, hardware e software garantem o 
+                    funcionamento eficiente e confiável dos servidores.
+                    </p>
 
-                    <p><strong>: </strong></p>
+                    <p><strong>Tipos de servidores: </strong>Existem vários tipos de servidores, cada um projetado para definir funções específicas dentro de uma rede de computadores. Alguns dos 
+                    principais tipos incluem:
+                        <ul>
+                            <li><strong>Servidores Web: </strong>Responsáveis por hospedar e fornecer páginas da web e outros conteúdos para os clientes que acessam a internet.</li>
+                            <li><strong>Servidores de Arquivos: </strong>Armazenam e agrupam arquivos e recursos de dados entre os dispositivos conectados à rede.</li>
+                            <li><strong>Servidores de Banco de Dados: </strong>Responsáveis por armazenar, gerenciar e processar dados, permitindo acesso rápido e seguro às informações.</li>
+                            <li><strong>Servidores de Email: </strong>Gerenciam o envio, coleta e armazenamento de mensagens de correio eletrônico. </li>
+                            <li><strong>Servidores de Aplicativos: </strong>Hospedam e fornecem acesso a aplicativos específicos, permitindo que os usuários executem tarefas específicas de software.</li>
+                            <li><strong>Servidores de Jogos: </strong>Oferecem infraestrutura para jogos online, permitindo a conexão de jogadores e o processamento de partidas em tempo real.</li>
+                        </ul>
+                    </p>
 
-                    <p><strong>: </strong></p>
+                    <p><strong>Hospedagem de Sites: </strong>A hospedagem de sites refere-se ao serviço que permite que indivíduos e empresas acessem seus sites acessíveis na 
+                    internet. Os provedores de hospedagem oferecem espaço em servidores web para armazenar arquivos, bancos de dados e outros recursos necessários para manter 
+                    um site online. Além disso, eles fornecem recursos como largura de banda, suporte técnico e segurança para garantir o funcionamento estável e seguro dos 
+                    sites hospedados.
+                    </p>
 
-                    <p><strong>: </strong></p>
+                <h2>Linguagens de Programação</h2>
+                    <p><strong>O que é: </strong>Linguagens de programação são conjuntos de regras e instruções que permitem aos desenvolvedores escreverem códigos para criar 
+                    software e aplicativos. Eles são usados ​​para definir a lógica e o comportamento dos programas, permitindo que os computadores executem tarefas específicas. 
+                    Existem diversas linguagens de programação, cada uma com suas características e específicas diferentes, mas todas abordadas com o objetivo de facilitar a 
+                    comunicação entre humanos e computadores.
+                    </p>
 
+                    <p><strong><i>Server-Side</i>: </strong>Referem-se a parte de um aplicativo web executado no servidor. Nesta abordagem, o processamento e a lógica de negócios 
+                    são realizados no servidor antes de enviar o resultado para o cliente. Isso inclui manipulação de dados, interações com bancos de dados, autenticação de 
+                    usuários e outras operações que ocorrem no back-end da aplicação. O Server-Side é essencial para garantir segurança, eficiência e controle centralizado em 
+                    sistemas web.
+                    </p>
 
-    
+                    <p><strong><i>Client-Side</i>: </strong>Referem-se a parte de uma aplicação web que é realizada no navegador do cliente, ou seja, no dispositivo do usuário. 
+                    Nesta abordagem, o processamento e a interação com a interface ocorrem no próprio dispositivo do usuário, utilizando tecnologias como HTML, CSS e JavaScript. 
+                    Isso permite uma experiência interativa e responsiva para o usuário, com manipulação de dados e elementos da página ocorrendo localmente, sem a necessidade de 
+                    comunicação frequente com o servidor. O Client-Side é fundamental para criar interfaces dinâmicas e interativas em aplicações web.
+                    </p>
+
+                    <p><strong>HTML não é Linguagem de Programação: </strong>HTML, abreviatura de HyperText Markup Language, é uma linguagem de marcação usada para criar a 
+                    estrutura e o conteúdo de páginas web. Embora seja essencial para o desenvolvimento web, não é considerada uma linguagem de programação no sentido tradicional. 
+                    Ao mesmo tempo, o HTML é uma linguagem de marcação que define a estrutura e a semântica dos elementos em uma página, permitindo a organização e apresentação de 
+                    conteúdo na web. Ele não possui recursos de lógica ou processamento dinâmico de dados, como ocorre em linguagens de programação, como JavaScript ou Python.
+                    </p>
+
     </body>
 </html>
