Correções e add pág 3

--- a/Desafio/pagina2.html
+++ b/Desafio/pagina2.html
@@ -43,7 +43,7 @@
                 </ol>
             </ul>
 
-            <h1><strong>Entendendo Comunicação Client x Server</strong></h1>
+            <h1>Entendendo Comunicação Client x Server</h1>
 
                 <h2>Historia da Web</h2>
                     <p><strong>Apresentação do Curso e Professor:</strong> Basicamente nesse primeiro momento o professor "Diego Medeiros Mainardes", o qual é Desenvolverdor Sênior
