correções e add pag 3

--- a/Desafio/pagina3.html
+++ b/Desafio/pagina3.html
@@ -49,7 +49,7 @@
 
                 <p><strong>Listas Ordenadas e Não Ordenadas: </strong> </p>
 
-                <p><strong>Links: </strong> </p>
+                <p><strong>Links: </strong> a</p>
 
 
     </body>
