finalização da pág 3 e add pág 4

--- a/Desafio/pagina3.html
+++ b/Desafio/pagina3.html
@@ -33,23 +33,55 @@
 
             <h2>Introdução ao HTML na Prática</h2>
 
-                <p><strong>Apresentando o Curso: </strong> </p>
+                <p><strong>Apresentando o Curso: </strong>Basicamente, nesse primeiro momento o professor "Diego Medeiros" apresentou o percurso até o final da "Introdução ao HTML na Prática"
+                e também citou o objetivo geral. O qual, é aprender a instalar e configurar ambiente de desenvolvimento. Entender o funcionamento do Inspetor de elementos do navegador e criar
+                sua página HTML
+                </p>
 
-                <p><strong>Ferramentas Utilizadas: </strong> </p>
+                <p><strong>Ferramentas Utilizadas: </strong>O Visual Studio Code (VS Code) é um editor de código fonte leve e altamente customizável, amplamente utilizado para 
+                desenvolvimento web, incluindo HTML. Assim, durante a "Formação HTML Web Developer" será nossa IDE. O mesmo oferece recursos como destaque de sintaxe, completamento automático, depuração integrada e integração com Git, 
+                proporcionando um ambiente eficiente e produtivo para escrever e editar código HTML.
+                </p>
 
-                <p><strong>Inspetor de Elementos: </strong> </p>
+                <p><strong>Inspetor de Elementos: </strong>O Inspetor de Elementos dos navegadores é uma ferramenta de desenvolvimento integrada que permite visualizar e 
+                inspecionar o código HTML, CSS e JavaScript de uma página da web em tempo real. Ele oferece recursos como visualização da estrutura do DOM, edição ao vivo de 
+                estilos CSS, depuração de JavaScript e análise de desempenho, ajudando os desenvolvedores a entenderem e depurarem suas páginas da web de forma eficiente. 
+                </p>
 
-                <p><strong>Estrutura Básica do HTML: </strong> </p>
+                <p><strong>Estrutura Básica do HTML: </strong>A estrutura básica do HTML consiste em elementos essenciais para criar uma página web. Inclui o doctype, que define 
+                a versão do HTML, as tags "html" para envolver todo o conteúdo, "head" para informações do documento, como metadados e links para estilos e scripts, e "body" 
+                para o conteúdo visível na página. Essa estrutura fornece o esqueleto básico para construir uma página web e é o ponto de partida para adicionar conteúdo, estilos 
+                e funcionalidades.
+                </p>
 
-                <p><strong>Falando sobre Tags: </strong> </p>
+                <p><strong>Falando sobre Tags e seus Atributos: </strong>As tags HTML são elementos fundamentais para estruturar e formatar o conteúdo de uma página web. Elas são cercadas por 
+                colchetes angulares e podem ter atributos para definir características adicionais. Dentre elas temos:
+                <ul>
+                    <li><strong>"h1" a "h6": </strong>Para títulos de diferentes níveis de importância.</li>
+                    <li><strong>"p": </strong>Para parágrafos de texto.</li>
+                    <li><strong>"a": </strong>Para criar links para outras páginas ou recursos.</li>
+                    <li><strong>"ul" e "ol": </strong>Para listas não ordenadas e ordenadas, respectivamente.</li>
+                    <li><strong>"li": </strong>Para itens de lista.</li>
+                    <li><strong>"img": </strong>Para inserir imagens na página.</li>
+                </ul>
+                </p>
 
-                <p><strong>Atributos das Tags: </strong> </p>
+                <p><strong>Textos: </strong> Além das tags citadas acima, é possível estilizar o texto usando atributos como <i>style</i>s e classes, e é possível formatar o texto usando 
+                tags como "br" para quebras de linha e "hr" para linhas horizontais. Essas tags ajudam a estruturar e apresentar o conteúdo textual de maneira organizada e 
+                legível em uma página web.
+                </p>
 
-                <p><strong>Textos: </strong> </p>
+                <p><strong>Listas Ordenadas e Não Ordenadas: </strong>São elementos HTML que permitem organizar e exibir informações de maneira estruturada em uma página web. 
+                Listas Não Ordenadas, são listas que não seguem uma ordem específica. Cada item é marcado com um ponto, um círculo ou um quadrado. São definidas usando a 
+                tag "ul" e cada item da lista é definido com a tag "li". Listas Ordenadas, são listas que seguem uma ordem numérica ou alfabética. Cada item é automaticamente 
+                numerado. São definidas usando a tag "ol" e cada item da lista é definido com a tag "li". Ambas as listas são úteis para organizar itens relacionados e são 
+                amplamente utilizadas em conteúdo web para melhorar a legibilidade e a estrutura do texto.
+                </p>
 
-                <p><strong>Listas Ordenadas e Não Ordenadas: </strong> </p>
-
-                <p><strong>Links: </strong> a</p>
+                <p><strong>Links: </strong>Links no HTML são elementos usados para criar conexões entre diferentes páginas da web ou recursos online. Eles são definidos pela 
+                tag "a" e podem ser usados para linkar para páginas externas". Utilizando o atributo "href", você pode especificar o endereço URL de destino. Como também 
+                linkar para páginas internas. Os links são uma parte fundamental da experiência de navegação na web, permitindo aos usuários acessar e interagir com diferentes recursos e conteúdos online.
+                </p>
 
 
     </body>
