--- a/Desafio/pagina4.html
+++ b/Desafio/pagina4.html
@@ -22,11 +22,22 @@
         <h1>Como Entregar seu Desafio de Projeto</h1>
             <h2>Como Entregar seu Desafio de Projeto</h2>
 
-            <p><strong>Como Entregar seu Desafio de Projeto: </strong> </p>
-            <p><strong>O Que Você Precisa Saber Sobre Git e GitHub?: </strong> </p>
+            <p><strong>Como Entregar seu Desafio de Projeto: </strong>Basicamente, nesse primeiro momento o professor "Falvo Jr." Ensinou passo a passo sobre a entrega do projeto 
+            dentro da plataforma de estudos da DIO.
+            </p>
+            <p><strong>O Que Você Precisa Saber Sobre Git e GitHub?: </strong>O Git é um sistema de controle de versão distribuído usado para rastrear alterações no código fonte 
+            durante o desenvolvimento de software. Ele permite que você mantenha um histórico de todas as alterações feitas em seus arquivos, o que facilita o trabalho em equipe, 
+            o controle de versão e a reversão para versões anteriores do seu projeto. Já, o GitHub é uma plataforma de hospedagem de código fonte baseada na web que utiliza o Git 
+            para controle de versão. Ele permite que você hospede seus repositórios Git na nuvem, facilitando o compartilhamento de código com outras pessoas e colaboração em 
+            projetos. Além disso, o GitHub oferece recursos adicionais, como rastreamento de problemas, solicitações de pull e integração contínua, que podem melhorar o fluxo de 
+            trabalho de desenvolvimento de software. Ao começar no desenvolvimento web com HTML, você pode se beneficiar do Git e do GitHub de várias maneiras, como usar  o Git para controlar 
+            as alterações no seu projeto HTML, permitindo que você acompanhe o progresso do desenvolvimento e reverta para versões anteriores se necessário. Com o GitHub, você 
+            pode compartilhar seu código com outras pessoas, permitindo colaboração em projetos HTML, revisão de código e feedback de colegas. E Ao hospedar seu projeto HTML no 
+            GitHub, você pode criar um portfólio online de seus trabalhos, o que pode ser útil para mostrar suas habilidades e experiência a potenciais empregadores ou 
+            colaboradores. Começar a usar Git e GitHub pode parecer um pouco intimidante no início, mas eles são ferramentas poderosas que podem melhorar significativamente seu 
+            fluxo de trabalho de desenvolvimento e colaboração. Existem muitos recursos online, tutoriais e cursos disponíveis para ajudá-lo a aprender e dominar essas ferramentas 
+            ao longo do tempo.
+            </p>
 
-            
-
-        
 </body>
 </html>
