--- a/Desafio/pagina6.html
+++ b/Desafio/pagina6.html
@@ -11,5 +11,9 @@
             <h2>Índice:</h2>
             <ul><li><strong>Referências</strong></li></ul>
 
+        <h1>Referências</h1>
+            <h2>Referências</h2>
+            <p><strong>Referências: </strong> </p>
+
 </body>
 </html>
