--- a/Desafio/pagina5.html
+++ b/Desafio/pagina5.html
@@ -22,8 +22,11 @@
         <h1>Criar Uma Página Web Utilizando as Tags Aprendidas</h1>
             <h2>Criar Uma Página Web Utilizando as Tags Aprendidas</h2>
 
-            <p><strong>Criar Uma Página Web Utilizando as Tags Aprendidas: </strong> </p>
-            <p><strong>Entendendo o Desafio: </strong> </p>
+            <p><strong>Criar Uma Página Web Utilizando as Tags Aprendidas: </strong>Nesse momento o professor "Diogo Mainardes" proporcionou um desafio. </p>
+            <p><strong>Entendendo o Desafio: </strong> Tendo em vista que o HTML, que significa Linguagem de Marcação de Hipertexto (HyperText Markup Language), é a linguagem padrão 
+            para a criação e estruturação de páginas web. Como também é uma linguagem de marcação que define a estrutura e o conteúdo de uma página web, utilizando uma série de 
+            elementos ou tags, fomos desafioados a criar uma página Web utilizando as tags aprendidas.
+            </p>
 
             
 
