--- a/Desafio/pagina4.html
+++ b/Desafio/pagina4.html
@@ -6,11 +6,12 @@
     <title>Como Entregar seu Desafio de Projeto</title>
 </head>
 <body>
-    <h2>Como Entregar seu Desafio de Projeto</h2>
+    <h2 id = "in4">Como Entregar seu Desafio de Projeto</h2>
         <hr />
+        <a href = "pagina1.html">Voltar para Página principal (A página de conteúdos)</a>
             <h2>Índice:</h2>
 
-            <ul><li><strong>Como Entregar seu Desafio de Projeto</strong></li>
+            <ul><li><h4><a href = "#entrega">Como Entregar seu Desafio de Projeto</a></h4></li>
                 <ol><li>Como Entregar seu Desafio de Projeto</li>
                     <ul><small> 
                         <li>Como Entregar seu Desafio de Projeto</li>
@@ -20,7 +21,7 @@
             </ul> 
                 
         <h1>Como Entregar seu Desafio de Projeto</h1>
-            <h2>Como Entregar seu Desafio de Projeto</h2>
+            <h2 id = "entrega">Como Entregar seu Desafio de Projeto</h2>
 
             <p><strong>Como Entregar seu Desafio de Projeto: </strong>Basicamente, nesse primeiro momento o professor "Falvo Jr." Ensinou passo a passo sobre a entrega do projeto 
             dentro da plataforma de estudos da DIO.
@@ -38,6 +39,7 @@
             fluxo de trabalho de desenvolvimento e colaboração. Existem muitos recursos online, tutoriais e cursos disponíveis para ajudá-lo a aprender e dominar essas ferramentas 
             ao longo do tempo.
             </p>
+            <a href = "#in4">(Voltar para o Índice)</a>
 
 </body>
 </html>
