--- a/Desafio/pagina6.html
+++ b/Desafio/pagina6.html
@@ -6,14 +6,27 @@
     <title>Referências</title>
 </head>
 <body>
-    <h2>Referências</h2>
+    <h2 id = "in6">Referências</h2>
         <hr />
+        <a href = "pagina1.html">Voltar para Página principal (A página de conteúdos)</a>
             <h2>Índice:</h2>
-            <ul><li><strong>Referências</strong></li></ul>
+            <ul><li> <h4><a href = "#ref">Referências</a></h4></li></ul>
 
         <h1>Referências</h1>
-            <h2>Referências</h2>
-            <p><strong>Referências: </strong> </p>
+            <h2 id = "ref">Referências</h2>
+            <p><strong>Referências: </strong> 
+            Segue lista de <i>links</i> que podem te ajudar durante os estudos:
+            <ul>
+                <li><a href = "https://www.youtube.com/watch?v=WfD_S2Vi4qI&t=1304s" target="_blank">Criando Seu Currículo Online Usando Apenas Ferramentas do GitHub</a></li>
+                <li><a href = "https://web.dio.me/lives/primeiros-passos-com-git-e-github" target="_blank">Primeiros Passos com Git e Github</a></li>
+                <li><a href = "https://web.dio.me/course/introducao-ao-git-e-ao-github/learning/75b9fe49-6ed4-4480-83a7-7e37fc356aa9" target="_blank">Introdução ao Git e ao GitHub</a></li>
+                <li><a href = "https://web.dio.me/course/trabalhando-com-branches-no-github/learning/32d05c5a-53b7-4f1d-a798-b9a8658240de" target="_blank">Trabalhando com Branches no GitHub</a></li>
+                <li><a href = "https://web.dio.me/course/git-e-github-focado-em-pullrequest/learning/7ee9e586-a200-41de-a075-fd6a7b4b5a1e" target="_blank">Git e GitHub Focado em PullRequest</a></li>
+                <li><a href = "https://github.com/JPLabussiereF" target="_blank">GitHub: JPLabussiereF (Meu GitHub)</a></li>
+                <li><a href = "https://www.linkedin.com/in/jo%C3%A3o-pedro-labussiere-fran%C3%A7a-550937282/" target="_blank">Linkedin: João Pedro Labussiere França (Meu Linkedin)</a></li>
+            </ul>
+            </p>
+            <a href = "#in6">(Voltar para o Índice)</a>
 
 </body>
 </html>
